# NEXINGALE

./: README.md
NEXINGALE/: LICENSE  README.md  pyproject.toml  quantflow_d_standalone.py
NEXINGALE/docs/: MATH_LEDGER.md  STATUS_AND_DEPLOYMENT.md
NEXINGALE/quantflow/branches/derivatives/: __init__.py  pipeline.py
NEXINGALE/quantflow/branches/derivatives/agents/: risk.py
NEXINGALE/quantflow/branches/derivatives/candidates/: engines.py  schema.py
NEXINGALE/quantflow/branches/derivatives/volta/: optimizer.py
NEXINGALE/quantflow/spine/rmt/: __init__.py  filter.py
NEXINGALE/quantflow/spine/tda/: detect.py
NEXINGALE/tests/derivatives/: test_pipeline.py
NEXINGALE/tests/spine/: test_rmt.py
Research Support/: Alok Sama - The Money Trap_ Lost Illusions Inside The Tech Bubble - libgen.li.epub
